Join group socket on set user, thinned out navbar on mobile, other small fixes

--- a/client/src/styling/components/_group.scss
+++ b/client/src/styling/components/_group.scss
@@ -272,6 +272,8 @@
     .noticeboard {
       flex: 1 100%;
       order: 3;
+
+      padding: 2.5rem 0rem 0rem;
     }
   }
 }
